# LAB3.3

./: .gitmodules  CMakeLists.txt  GUI.cpp  GUI.h  Person.h  main.cpp
Basic Stuctures/: AVLDictionary.h  AVLTree.h  IDictionary.h  IIterator.h  Range.h  Stack.h  tempClass.cpp  tempClass.h
Basic_Structures/: AVLDictionary.h  AVLSet.h  AVLTree.h  IDictionary.h  ISet.h  Queue.h  Range.h
Pointers/: SharedPtr.h  UnqPtr.h  WeakPtr.h
Sequence/: DynamicArray.h  Exception.h  LinkedList.h  MutableArraySequence.h  MutableListSequence.h  MutableSequence.h  Sequence.h
Tasks/: Cache.h  Histogram.cpp  Histogram.h  HistogramNew.h
Tasks/Student/: Student.cpp  Student.h
Tests/: AVLDictionaryTest.cpp  AVLDictionaryTest.h  AVLTreeTest.cpp  AVLTreeTest.h  CacheTest.cpp  CacheTest.h  HistogramTest.cpp  HistogramTest.h
